@@ -1,5 +1,6 @@
 0.10:
   add multi-ranges (only used by the Acrobat Reader plugin AFAIK)
+  abstract out accept() deferment to libowfat (socket_deferaccept)
 
 0.9:
   add /server-status
